--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@
 *.pyc
 
 */*/*/__pycache__/
-
 */*/__pycache__/
-
 */__pycache__/
 
+*/*/*/migrations/__init__.py
+*/*/migrations/__init__.py
+*/migrations/__init__.py
+
+*/__init__.py
 info.md
 .vscode
 README.md
