O modulo foi refatorado melhorando assim a organização, tambem foi mudado alguns campos da tabela(Foi retirado o relacionamento, e no lugar foi adicionado o nome do usuario, para que isso funcionasse, foi necessario mudar a logica da viewSet)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 *.pyc
 
+*/*/*/*/__pycache__/
 */*/*/__pycache__/
 */*/__pycache__/
 */__pycache__/
@@ -16,6 +17,8 @@ chart/migrations/
 authentication/migrations/
 products/migrations/
 comments/migrations/
+users/migrations
+slides/migrations
 
 
 */__init__.py
