Configurando o banco de dados, realizando os ultimos ajustes no docker e no docker-compose, criando arquivo .env, e foram realizados testes rodando localmente com o docker

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ comments/migrations/
 users/migrations
 slides/migrations
 
-
 */__init__.py
 info.md
 .vscode
@@ -38,3 +37,7 @@ README.md
 .pyc*
 
 venv
+
+docker-compose.yml
+init.sql
+my-postgres.conf
